ignore data file

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ $RECYCLE.BIN/
 # Directories potentially created on remote AFP share
 .AppleDB
 .AppleDesktop
+.data
 Network Trash Folder
 Temporary Items
 .apdisk
